--- a/app/views/requests/_show_panel_title_buttons.html.erb
+++ b/app/views/requests/_show_panel_title_buttons.html.erb
@@ -1,9 +1,9 @@
 <div class="right-badges pull-right">
-<span class="badge pull-right clickable" data-target="<%= request_path(request, id_list: id_list) %>">
+<span class="badge pull-right clickable" data-target="<%= request_path(request, mobile: @mobile, id_list: id_list) %>">
   <span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
 </span>
 <% if display?(:edit_request) -%>
-  <span class="badge pull-right clickable" data-target="<%= edit_request_path(request, id_list: id_list) %>">
+  <span class="badge pull-right clickable" data-target="<%= edit_request_path(request, mobile: @mobile, id_list: id_list) %>">
     <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
   </span>
 <% end -%>
@@ -17,7 +17,8 @@
     <ul class="dropdown-menu" role="menu">
       <% %w(checked unchecked not-checkable).each do |state| -%>
         <li>
-          <%= link_to request_path(request, 'request[id_list]': id_list, 'request[job_status]': state.underscore.upcase), method: :put, remote: true do %>
+          <%= link_to request_path(request, 'request[id_list]': id_list, mobile: @mobile, 'request[job_status]': state.underscore.upcase),
+            method: :put, remote: true do %>
             <span class="glyphicon glyphicon-flag job-status <%= state %>" aria-hidden="true"></span>
             <%= t(state.to_sym, scope: 'requests.job_status') %>
           <% end -%>
