--- a/app/views/requests/mobile/_show.html.erb
+++ b/app/views/requests/mobile/_show.html.erb
@@ -107,7 +107,7 @@
                   <%= Note.model_name.human %> (<%= notes.size %>)
                   <span class="caret"></span>
                 </a>
-                <span class="badge pull-right clickable" data-target="<%= new_request_note_path(@request, id_list: @id_list) %>">
+                <span class="badge pull-right clickable" data-target="<%= new_request_note_path(@request, id_list: @id_list, mobile: @mobile) %>">
                   <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
                 </span>
               </h4>
