--- a/app/views/application/mobile/_modal.html.erb
+++ b/app/views/application/mobile/_modal.html.erb
@@ -1,6 +1,6 @@
 <div class="modal-header text-<%= @errors ? :warning : :success %>">
   <span class="glyphicon glyphicon-<%= @errors ? :alert : 'ok-sign' %>"></span>
-  <%= t("#{ controller_name }.#{ action_name }.#{ @errors ? :error : :success }", @modal_title_options || {}) %>
+  <%= t("#{ controller_name }.#{ context }.#{ action_name }.#{ @errors ? :error : :success }", @modal_title_options || {}) %>
 </div>
 <div class="modal-body">
   <% if (messages = @errors.try(:full_messages)).present? -%>
