--- a/app/assets/javascripts/maps.coffee.erb
+++ b/app/assets/javascripts/maps.coffee.erb
@@ -227,7 +227,6 @@ class KS.Layers
     @layers = []
     for layer in <%= Settings::Map.wmts_layers.to_json %>
       do (layer, @layers) ->
-        console.log('extent', layer.extent)
         @layers.push new ol.layer.Tile
           extent: layer.extent
           source: new ol.source.WMTS
@@ -322,9 +321,11 @@ KS.createObservationFeatures= (controller, layer) ->
 
 class KS.FeatureVector
   constructor: (controller, is_request = false) ->
+    console.log('00000000000000000000000000000')
     return vector = new ol.source.Vector
       format: new ol.format.TopoJSON
       loader: (extent, resolution, projection) ->
+        console.log('1111111111111111111111111111111')
         extent = KS.olMap.getView().calculateExtent(KS.olMap.getSize())
         new KS.FeatureData(controller, extent, vector, is_request)
 
@@ -356,8 +357,8 @@ class KS.FeatureData
           geometry: new ol.geom.Point(coord)
           icon: elem.icon_map
           attribution: attribution
+        f.setId(elem.service_request_id)
         features.push f
-      vector.clear true
       vector.addFeatures features
 
 class KS.Geolocation
@@ -457,7 +458,7 @@ KS.clearNewFeature= () ->
 
 KS.moveNewFeature= (coord) ->
   if layer = KS.layers.findById('new_feature')
-    pos = coord || KS.olMap.getView().getCenter()
+    pos = coord || KS.olMap.getView().getCenter().slice(0, 2)
     feat = layer.getSource().getFeatures()[0]
     feat.getGeometry().setCoordinates(pos)
 
