--- a/app/assets/javascripts/maps.coffee.erb
+++ b/app/assets/javascripts/maps.coffee.erb
@@ -18,6 +18,7 @@ KS.jobs_path = "<%= Settings::Route.jobs_path %>/"
 KS.areas_path = "<%= Settings::Route.areas_path %>/?with_districts=true"
 KS.login_required = <%= Settings::Client.login_required %>
 KS.draw_observation = null
+KS.animateRefresh = <%= Settings::Client.animate_refresh %> * 1000
 
 KS.GeolocationControl = () ->
   span = document.createElement('span')
@@ -188,6 +189,7 @@ KS.styles =
           50
         ]
         src: KS.imagePath("new-#{ type }")
+        size: [56, 64]
 
   location: ->
     styles = [ new ol.style.Style
@@ -291,6 +293,11 @@ class KS.Layers
       id: 'highlight_layer'
       source: new ol.source.Vector
       style: KS.styles.highlightStyle
+      visible: true
+
+    @layers.push  new ol.layer.Vector
+      id: 'new_feature'
+      source: new ol.source.Vector
       visible: true
 
     map.addLayer layer for layer in @layers
@@ -413,13 +420,9 @@ KS.createFeature= (type, coord) ->
 
   KS.clearNewFeature()
 
-  layer =  new ol.layer.Vector
-      id: 'new_feature'
-      source: new ol.source.Vector
-      style: KS.styles.newFeature(type)
-      visible: true
+  layer = KS.layers.findById('new_feature')
+  layer.setStyle(KS.styles.newFeature(type))
 
-  KS.olMap.addLayer layer
 
   position = coord || KS.olMap.getView().getCenter()
   if KS.getUrlParam('mobile') && KS.position && ol.extent.containsCoordinate(KS.olMap.getView().calculateExtent(
@@ -429,46 +432,53 @@ KS.createFeature= (type, coord) ->
   feature = new ol.Feature(
     geometry: new ol.geom.Point(position)
     type: type
+    animate: true
   )
   layer.getSource().addFeature(feature)
-  #layer.animateFeature feature, [
-    #new (ol.featureAnimation['Drop'])(
-      #speed: Number(2)
-      #duration: Number(400)
-      #side: false)
-    #new (ol.featureAnimation['Bounce'])(
-      #speed: Number(2)
-      #duration: Number(400)
-      #slide: false)
-  #]
+  KS.addNewFeatureInteraction(layer, feature)
+  setTimeout(KS.refreshAnimation, 0)
+
+KS.addNewFeatureInteraction = (layer, feature) ->
   KS.newFeatureInteraction = new ol.interaction.Modify(
     features: new ol.Collection([feature])
     pixelTolerance: 50
     style: layer.getStyle()
   )
+  KS.newFeatureInteraction.on 'modifystart', (e) ->
+    feature.set('animate', false)
   KS.olMap.addInteraction KS.newFeatureInteraction
 
+KS.animateNewFeature= (layer, feature) ->
+  layer.animateFeature feature, [
+    new (ol.featureAnimation['Bounce'])(
+      speed: Number(1)
+      duration: Number(500)
+      slide: false)
+  ]
+
+KS.refreshAnimation = () ->
+  layer = KS.layers.findById('new_feature')
+  if (feature = layer.getSource().getFeatures()[0]) && feature.get('animate')
+    KS.animateNewFeature(layer, feature)
+    setTimeout(KS.refreshAnimation, KS.animateRefresh)
+
 KS.clearNewFeature= () ->
-  if layer = KS.layers.findById('new_feature')
+  layer = KS.layers.findById('new_feature')
+  if layer.getSource().getFeatures().length > 0
     if KS.newFeatureInteraction
       KS.olMap.removeInteraction KS.newFeatureInteraction
-    KS.olMap.removeLayer(layer)
+    layer.getSource().clear(true)
 
 KS.moveNewFeature= (coord) ->
-  if layer = KS.layers.findById('new_feature')
+  layer = KS.layers.findById('new_feature')
+  if feat = layer.getSource().getFeatures()[0]
     pos = coord || KS.olMap.getView().getCenter().slice(0, 2)
-    feat = layer.getSource().getFeatures()[0]
+    feat.set('animate', false)
     feat.getGeometry().setCoordinates(pos)
 
     if KS.newFeatureInteraction
       KS.olMap.removeInteraction KS.newFeatureInteraction
-
-      KS.newFeatureInteraction = new ol.interaction.Modify(
-        features: new ol.Collection([feat])
-        pixelTolerance: 50
-        style: layer.getStyle()
-      )
-      KS.olMap.addInteraction KS.newFeatureInteraction
+      KS.addNewFeatureInteraction(layer, feat)
 
 KS.reloadFeatures= () ->
   extent = KS.olMap.getView().calculateExtent(KS.olMap.getSize())
