Karte bei Adresssuche nach Straße auf die Straße zentrieren

--- a/app/assets/javascripts/maps.coffee.erb
+++ b/app/assets/javascripts/maps.coffee.erb
@@ -396,6 +396,7 @@ class KS.Geolocation
           features: feature_array
 
       if layer = KS.layers.findById('geolocation')
+        layer.getSource().clear(true)
         map.removeLayer layer
       map.addLayer featuresOverlay
 
