--- a/app/assets/javascripts/application.coffee.erb
+++ b/app/assets/javascripts/application.coffee.erb
@@ -179,3 +179,18 @@ $ ->
     else
       KS.buildError(error)
     false
+
+  $('.start-panel').find('.btn-primary').toArray()[0].focus() if $('.start-panel').is(':visible')
+
+  $(document).keyup (e) ->
+    switch e.key
+      when 'Escape'
+        $($('.back').toArray().find((el) ->
+          $(el).is(':visible')
+        )).trigger('click')
+      when 'ArrowLeft'
+        $('.backward').trigger('click')
+      when 'ArrowRight'
+        $('.forward').trigger('click')
+      else
+    false
