--- a/app/views/requests/desktop/_request_header.html.erb
+++ b/app/views/requests/desktop/_request_header.html.erb
@@ -5,7 +5,7 @@
         <%= @request.service %>
       </div>
       <div class="col-md-2">
-        <%= link_to [:requests, back: true], data: { type: 'script', remote: true }, title: t('buttons.close') do %>
+        <%= link_to [:requests, back: true], class: 'back', data: { type: 'script', remote: true }, title: t('buttons.close') do %>
           <span class="glyphicon glyphicon-remove"></span>
         <% end -%>
       </div>
