--- a/app/views/starts/show.html.erb
+++ b/app/views/starts/show.html.erb
@@ -43,7 +43,7 @@
     </div>
   </div>
   <div class="col-md-8">
-    <div class="panel panel-default">
+    <div class="panel panel-default start-panel">
       <div class="panel-body">
         <div class="row form-group">
           <div class="col-md-12">
